[gd_scene load_steps=3 format=3 uid="uid://b5f2iu85oiuq3"]

[ext_resource type="Script" path="res://Scripts/dificulty.gd" id="1_rvh64"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqm4d"]
bg_color = Color(4.90934e-06, 0.714605, 0.420193, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvh64")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dqm4d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 525.0
offset_top = 259.0
offset_right = 628.0
offset_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Easy" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="Medium" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Standart
"

[node name="hard" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hard
"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)
scale = Vector2(30, 30)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Easy" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Medium" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/hard" to="." method="_on_options_pressed"]
